--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     volumes:
       - ./api:/app 
     command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+    environment:
+      - OLLAMA_HOST=http://ollama:11434
 
   qdrant:
     image: qdrant/qdrant
